# Projects

./: .gitignore  README.md
Applications/: .gitignore
Applications/Jyotish/: pyproject.toml
Applications/Ollama_service/: .gitignore  README.md  models_test.txt  pyproject.toml
Applications/Ollama_service/src/: app.py
Applications/RL-chess-engine/src/rl_training/: selfplay.py
Applications/Research_Agent/: .gitignore  CODEBASE.md  DOCS_INDEX.md  Dockerfile  Guide.docx  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
Applications/Research_Agent/src/backend/: __init__.py  cli.py  config.py
Applications/Research_Agent/src/backend/langgraph/: __init__.py  graphs.py
Applications/Research_Agent/src/backend/langgraph/nodes/: __init__.py  analysis_nodes.py  ingestion_nodes.py  mcp_nodes.py  retrieval_nodes.py
Applications/Research_Agent/src/backend/models/: schemas.py  states.py
Applications/Research_Agent/src/backend/services/: answer_quality.py  chunker.py  embeddings.py  llm_client.py  logging.py  pdf_parse.py  qdrant_store.py  rerank.py  retriever.py
Applications/Research_Agent/src/backend/services/sources/: arxiv_client.py
Applications/Research_Agent/src/backend/stores/: postgres_repo.py  redis_cache.py
Applications/Research_Agent/src/tests/: conftest.py  test_smoke.py
Applications/Research_Agent/src/tests/integration/: test_workflows.py
Applications/Research_Agent/src/tests/unit/: test_api.py  test_services.py
Applications/Research_Agent/src/web/webapp/: api_views.py  asgi.py  settings.py  urls.py  ws_consumers.py  wsgi.py
Applications/Research_Agent/src/web/webapp/management/: __init__.py
Applications/Research_Agent/src/web/webapp/management/commands/: run_ingestion.py
Applications/Research_Agent/src/web/webapp/static/css/: style.css
Applications/Research_Agent/src/web/webapp/static/js/: api.js  app.js  websocket.js
Applications/Research_Agent/src/web/webapp/templates/: index.html
