[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "VirendraChavda",email = "virendrasinh.chavda01@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
